--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,13 +15,13 @@
     <title>{{ pageTitle|e }}</title>
     <link rel="stylesheet" type="text/css" href="{{ stylesheet }}" />
     <link rel='stylesheet' type='text/css' href="//fonts.googleapis.com/css?family=Ubuntu:400,700,400italic"/>
-    <link rel="stylesheet" type="text/css" href="//www.sfml-dev.org/styles/style.css" title="default" media="screen,print"/>
-    <link rel="stylesheet" type="text/css" href="//www.sfml-dev.org/scripts/highlight/styles/github.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" title="default" media="screen,print"/>
+    <link rel="stylesheet" type="text/css" href="/scripts/highlight/styles/github.css"/>
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ path_to_root }}rss" />
-    <link rel="icon" type="image/ico" href="//www.sfml-dev.org/images/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="/images/favicon.ico"/>
     <!--[if (gte IE 9)|!(IE)]>
     <!-->
-        <script type="text/javascript" src="//www.sfml-dev.org/scripts/highlight/highlight.pack.js"></script>
+        <script type="text/javascript" src="/scripts/highlight/highlight.pack.js"></script>
         <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
     <!--<![endif]-->
     {% endblock %}
@@ -44,23 +44,23 @@
     </script>
     <div id="banner-container">
         <div id="banner">
-            <a href="//www.sfml-dev.org/index.php"><img id="logo" src="//www.sfml-dev.org/images/logo.png" alt="SFML logo"/></a>
+            <a href="http://www.sfml-dev.org/index.php"><img id="logo" src="/images/logo.png" alt="SFML logo"/></a>
             <ul id="menu">
-                <li><a href="//www.sfml-dev.org/learn.php">Learn</a></li>
-                <li><a href="//www.sfml-dev.org/download.php">Download</a></li>
-                <li><a href="//www.sfml-dev.org/community.php">Community</a></li>
-                <li><a href="//www.sfml-dev.org/development.php">Development</a></li>
+                <li><a href="http://www.sfml-dev.org/learn.php">Learn</a></li>
+                <li><a href="http://www.sfml-dev.org/download.php">Download</a></li>
+                <li><a href="http://www.sfml-dev.org/community.php">Community</a></li>
+                <li><a href="http://www.sfml-dev.org/development.php">Development</a></li>
             </ul>
         </div>
     </div>
     <div id="navigation-container">
         <div id="navigation">
             <ul id="breadcrumbs">
-            <li><a href="//www.sfml-dev.org/index.php">Home</a></li><li>&raquo;<a href="//mirror2.sfml-dev.org:8010">Buildbot</a></li>                    </ul>
+            <li><a href="http://www.sfml-dev.org/index.php">Home</a></li><li>&raquo;<a href="/">Buildbot</a></li>                    </ul>
             <ul id="buttons">
-                <li><a id="language-fr" href="/index-fr.php" title="Site en français">Français</a></li>
+                <li><a id="language-fr" href="http://www.sfml-dev.org/index-fr.php" title="Site en français">Français</a></li>
                 <li><a id="donate" href="https://www.paypal.com/cgi-bin/webscr/?cmd=_s-xclick&hosted_button_id=TYJ2XQPG3SXPG&lc=US" title="Make a donation">Donate</a></li>
-                <li><a id="flattr" href="//flattr.com/thing/38063/SFML-multimedia-library" title="Flattr SFML">Flattr</a></li>
+                <li><a id="flattr" href="https://flattr.com/thing/38063/SFML-multimedia-library" title="Flattr SFML">Flattr</a></li>
             </ul>
         </div>
     </div>
@@ -103,8 +103,8 @@
             Copyright © <a href="mailto:laurent@sfml-dev.org" title="Contact the author">Laurent Gomila</a>
         </div>
     </div>
-    <script type="text/javascript">var _paq = _paq || [];_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);(function() {var u=(("https:" == document.location.protocol) ? "https" : "http") + "://www.sfml-dev.org/piwik/";_paq.push(['setTrackerUrl', u+'piwik.php']);_paq.push(['setSiteId', 1]);var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);})();</script>
-    <noscript><p><img src="http://www.sfml-dev.org/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+    <!--<script type="text/javascript">var _paq = _paq || [];_paq.push(['trackPageView']);_paq.push(['enableLinkTracking']);(function() {var u=(("https:" == document.location.protocol) ? "https" : "http") + "://www.sfml-dev.org/piwik/";_paq.push(['setTrackerUrl', u+'piwik.php']);_paq.push(['setSiteId', 1]);var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);})();</script>-->
+    <!--<noscript><p><img src="http://www.sfml-dev.org/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>-->
     {% endblock -%}
   </body>
 </html>
